--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <html>
 <head>
   <title>テストタイトル</title>
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+  <link rel="stylesheet" herf="./css/main.css">
 </head>
-<body>
+<body class="grid">
   <header>
-    <section>
-      <h1>テストタイトル</h1>
-    </section>
+    <h1>テストタイトル</h1>
+    <ul>
+      <li>Profile</li>
+      <li>何か</li>
+      <li>何か</li>>
+    </ul>
   </header>
   <main>
-    <section>
-      <h1>なんらかのセクション</h1>
-      <p>hogehoge</p>
-    </section>
+    <h1>なんらかのセクション</h1>
+    <p>hogehoge</p>
   </main>
   <footer>
   </footer>
