css application confirmation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
   <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
-  <link rel="stylesheet" herf="./css/main.css">
+  <link rel="stylesheet" herf="stylesheet/main.css">
 </head>
 <body class="grid">
   <header>
@@ -12,7 +12,7 @@
     <ul>
       <li>Profile</li>
       <li>何か</li>
-      <li>何か</li>>
+      <li>何か</li>
     </ul>
   </header>
   <main>
